// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extend integration (eval -> toString) > extend-chaining.less AST shape: same nodes and selector shapes as parsed (start through @media (tv)) 1`] = `
"(Rules
  rules:
    [
      (Comment '//very simple chaining')
      (Ruleset
        selector:
          (BasicSelector '.a')
        rules:
          [
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Color
                  node: 'black'
                )
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.b')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.a')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.c')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.b')
            )
          ]
      )
      (Comment '//very simple chaining, ordering not important')
      (Ruleset
        selector:
          (BasicSelector '.d')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.e')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.e')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.f')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.f')
        rules:
          [
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Color
                  node: 'black'
                )
            )
          ]
      )
      (Comment '//extend with all')
      (Ruleset
        selector:
          (CompoundSelector
            value:
              [
                (BasicSelector '.g')
                (BasicSelector '.h')
              ]
          )
        rules:
          [
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Color
                  node: 'black'
                )
            )
          ]
      )
      (Ruleset
        selector:
          (CompoundSelector
            value:
              [
                (BasicSelector '.i')
                (BasicSelector '.j')
              ]
          )
        rules:
          [
            (Extend
              target:
                (BasicSelector '.g')
            )
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Any 'inherit')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.k')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.i')
            )
          ]
      )
      (Comment '//extend multi-chaining')
      (Ruleset
        selector:
          (BasicSelector '.l')
        rules:
          [
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Color
                  node: 'black'
                )
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.m')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.l')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.n')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.m')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.o')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.n')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.p')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.o')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.q')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.p')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.r')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.q')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.s')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.r')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.t')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.s')
            )
          ]
      )
      (Comment '// self referencing is ignored')
      (Ruleset
        selector:
          (BasicSelector '.u')
        rules:
          [
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Color
                  node: 'black'
                )
            )
          ]
      )
      (Ruleset
        selector:
          (CompoundSelector
            value:
              [
                (BasicSelector '.v')
                (BasicSelector '.u')
                (BasicSelector '.v')
              ]
          )
        rules:
          [
            (Extend
              target:
                (BasicSelector '.u')
            )
          ]
      )
      (Comment '// circular reference because the new extend product will match the existing extend')
      (Ruleset
        selector:
          (BasicSelector '.w')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.w')
            )
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Color
                  node: 'black'
                )
            )
          ]
      )
      (Ruleset
        selector:
          (CompoundSelector
            value:
              [
                (BasicSelector '.v')
                (BasicSelector '.w')
                (BasicSelector '.v')
              ]
          )
        rules:
          [
            (Extend
              target:
                (BasicSelector '.w')
            )
          ]
      )
      (Comment '// classic circular references')
      (Ruleset
        selector:
          (BasicSelector '.x')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.z')
            )
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Any 'x')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.y')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.x')
            )
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Any 'y')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.z')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.y')
            )
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Any 'z')
            )
          ]
      )
      (Comment '//very simple chaining, but with the extend inside the ruleset')
      (Ruleset
        selector:
          (BasicSelector '.va')
        rules:
          [
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Color
                  node: 'black'
                )
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.vb')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.va')
            )
            (Nil '')
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Any 'inherit')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.vc')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.vb')
            )
            (Nil '')
          ]
      )
      (Comment '// media queries - don\\'t extend outside, do extend inside')
      (AtRule
        name:
          (Any '@media')
        prelude:
          (Paren
            node:
              (QueryCondition
                value:
                  [
                    (Keyword [role=keyword] 'tv')
                  ]
              )
          )
        rules:
          [
            (Ruleset
              selector:
                (BasicSelector '.ma')
              rules:
                [
                  (Extend
                    target:
                      (SelectorList
                        value:
                          [
                            (BasicSelector '.a')
                            (BasicSelector '.b')
                            (BasicSelector '.c')
                            (BasicSelector '.d')
                            (BasicSelector '.e')
                            (BasicSelector '.f')
                            (BasicSelector '.g')
                            (BasicSelector '.h')
                            (BasicSelector '.i')
                            (BasicSelector '.j')
                            (BasicSelector '.k')
                            (BasicSelector '.l')
                            (BasicSelector '.m')
                            (BasicSelector '.n')
                            (BasicSelector '.o')
                            (BasicSelector '.p')
                            (BasicSelector '.q')
                            (BasicSelector '.r')
                            (BasicSelector '.s')
                            (BasicSelector '.t')
                            (BasicSelector '.u')
                            (BasicSelector '.v')
                            (BasicSelector '.w')
                            (BasicSelector '.x')
                            (BasicSelector '.y')
                            (BasicSelector '.z')
                            (BasicSelector '.md')
                          ]
                      )
                  )
                  (Declaration
                    name:
                      (Any [role=property] 'color')
                    value:
                      (Color
                        node: 'black'
                      )
                  )
                ]
            )
            (Ruleset
              selector:
                (BasicSelector '.md')
              rules:
                [
                  (Declaration
                    name:
                      (Any [role=property] 'color')
                    value:
                      (Any 'inherit')
                  )
                ]
            )
            (AtRule
              name:
                (Any '@media')
              prelude:
                (Paren
                  node:
                    (QueryCondition
                      value:
                        [
                          (Keyword [role=keyword] 'plasma')
                        ]
                    )
                )
              rules:
                [
                  (Rules
                    rules:
                      [
                        (Extend
                          selector:
                            (SelectorList
                              value:
                                [
                                  (BasicSelector '.me')
                                  (BasicSelector '.mf')
                                ]
                            )
                          target:
                            (SelectorList
                              value:
                                [
                                  (BasicSelector '.mb')
                                  (BasicSelector '.md')
                                ]
                            )
                        )
                        (Ruleset
                          selector:
                            (SelectorList
                              value:
                                [
                                  (BasicSelector '.me')
                                  (BasicSelector '.mf')
                                ]
                            )
                          rules:
                            [
                              (Nil '')
                              (Declaration
                                name:
                                  (Any [role=property] 'background')
                                value:
                                  (Color
                                    node: 'red'
                                  )
                              )
                            ]
                        )
                      ]
                  )
                ]
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.mb')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.ma')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.mc')
        rules:
          [
            (Extend
              target:
                (BasicSelector '.mb')
            )
          ]
      )
    ]
)"
`;

exports[`extend integration (eval -> toString) > extend-chaining.less AST shape: same nodes and selector shapes as parsed (start through @media (tv)) 2`] = `
"(Rules
  rules:
    [
      (Comment '//very simple chaining')
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.a')
                (BasicSelector '.b')
                (BasicSelector '.c')
              ]
          )
        rules:
          [
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Color
                  node: 'black'
                )
            )
          ]
      )
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.b')
                (BasicSelector '.c')
              ]
          )
        rules:
          [
            (Nil '')
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.c')
        rules:
          [
            (Nil '')
          ]
      )
      (Comment '//very simple chaining, ordering not important')
      (Ruleset
        selector:
          (BasicSelector '.d')
        rules:
          [
            (Nil '')
          ]
      )
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.e')
                (BasicSelector '.d')
              ]
          )
        rules:
          [
            (Nil '')
          ]
      )
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.f')
                (BasicSelector '.e')
                (BasicSelector '.d')
              ]
          )
        rules:
          [
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Color
                  node: 'black'
                )
            )
          ]
      )
      (Comment '//extend with all')
      (Ruleset
        selector:
          (CompoundSelector
            value:
              [
                (PseudoSelector
                  name: ':is'
                  arg:
                    (SelectorList
                      value:
                        [
                          (BasicSelector '.g')
                          (CompoundSelector
                            value:
                              [
                                (PseudoSelector
                                  name: ':is'
                                  arg:
                                    (SelectorList
                                      value:
                                        [
                                          (BasicSelector '.i')
                                          (BasicSelector '.k')
                                        ]
                                    )
                                )
                                (BasicSelector '.j')
                              ]
                          )
                        ]
                    )
                )
                (BasicSelector '.h')
              ]
          )
        rules:
          [
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Color
                  node: 'black'
                )
            )
          ]
      )
      (Ruleset
        selector:
          (CompoundSelector
            value:
              [
                (PseudoSelector
                  name: ':is'
                  arg:
                    (SelectorList
                      value:
                        [
                          (BasicSelector '.i')
                          (BasicSelector '.k')
                        ]
                    )
                )
                (BasicSelector '.j')
              ]
          )
        rules:
          [
            (Nil '')
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Any 'inherit')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.k')
        rules:
          [
            (Nil '')
          ]
      )
      (Comment '//extend multi-chaining')
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.l')
                (BasicSelector '.m')
                (BasicSelector '.n')
                (BasicSelector '.o')
                (BasicSelector '.p')
                (BasicSelector '.q')
                (BasicSelector '.r')
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          [
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Color
                  node: 'black'
                )
            )
          ]
      )
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.m')
                (BasicSelector '.n')
                (BasicSelector '.o')
                (BasicSelector '.p')
                (BasicSelector '.q')
                (BasicSelector '.r')
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          [
            (Nil '')
          ]
      )
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.n')
                (BasicSelector '.o')
                (BasicSelector '.p')
                (BasicSelector '.q')
                (BasicSelector '.r')
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          [
            (Nil '')
          ]
      )
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.o')
                (BasicSelector '.p')
                (BasicSelector '.q')
                (BasicSelector '.r')
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          [
            (Nil '')
          ]
      )
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.p')
                (BasicSelector '.q')
                (BasicSelector '.r')
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          [
            (Nil '')
          ]
      )
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.q')
                (BasicSelector '.r')
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          [
            (Nil '')
          ]
      )
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.r')
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          [
            (Nil '')
          ]
      )
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          [
            (Nil '')
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.t')
        rules:
          [
            (Nil '')
          ]
      )
      (Comment '// self referencing is ignored')
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.u')
                (CompoundSelector
                  value:
                    [
                      (BasicSelector '.v')
                      (BasicSelector '.u')
                      (BasicSelector '.v')
                    ]
                )
              ]
          )
        rules:
          [
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Color
                  node: 'black'
                )
            )
          ]
      )
      (Ruleset
        selector:
          (CompoundSelector
            value:
              [
                (BasicSelector '.v')
                (PseudoSelector
                  name: ':is'
                  arg:
                    (SelectorList
                      value:
                        [
                          (BasicSelector '.u')
                          (CompoundSelector
                            value:
                              [
                                (BasicSelector '.v')
                                (BasicSelector '.u')
                                (BasicSelector '.v')
                              ]
                          )
                        ]
                    )
                )
                (BasicSelector '.v')
              ]
          )
        rules:
          [
            (Nil '')
          ]
      )
      (Comment '// circular reference because the new extend product will match the existing extend')
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.w')
                (CompoundSelector
                  value:
                    [
                      (BasicSelector '.v')
                      (BasicSelector '.w')
                      (BasicSelector '.v')
                    ]
                )
              ]
          )
        rules:
          [
            (Nil '')
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Color
                  node: 'black'
                )
            )
          ]
      )
      (Ruleset
        selector:
          (CompoundSelector
            value:
              [
                (BasicSelector '.v')
                (PseudoSelector
                  name: ':is'
                  arg:
                    (SelectorList
                      value:
                        [
                          (BasicSelector '.w')
                          (CompoundSelector
                            value:
                              [
                                (BasicSelector '.v')
                                (BasicSelector '.w')
                                (BasicSelector '.v')
                              ]
                          )
                        ]
                    )
                )
                (BasicSelector '.v')
              ]
          )
        rules:
          [
            (Nil '')
          ]
      )
      (Comment '// classic circular references')
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.x')
                (BasicSelector '.y')
                (BasicSelector '.z')
              ]
          )
        rules:
          [
            (Nil '')
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Any 'x')
            )
          ]
      )
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.y')
                (BasicSelector '.z')
                (BasicSelector '.x')
              ]
          )
        rules:
          [
            (Nil '')
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Any 'y')
            )
          ]
      )
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.z')
                (BasicSelector '.x')
                (BasicSelector '.y')
              ]
          )
        rules:
          [
            (Nil '')
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Any 'z')
            )
          ]
      )
      (Comment '//very simple chaining, but with the extend inside the ruleset')
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.va')
                (BasicSelector '.vb')
                (BasicSelector '.vc')
              ]
          )
        rules:
          [
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Color
                  node: 'black'
                )
            )
          ]
      )
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.vb')
                (BasicSelector '.vc')
              ]
          )
        rules:
          [
            (Nil '')
            (Nil '')
            (Declaration
              name:
                (Any [role=property] 'color')
              value:
                (Any 'inherit')
            )
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.vc')
        rules:
          [
            (Nil '')
            (Nil '')
          ]
      )
      (Comment '// media queries - don\\'t extend outside, do extend inside')
      (AtRule
        name:
          (Any '@media')
        prelude:
          (Paren
            node:
              (QueryCondition
                value:
                  [
                    (Keyword [role=keyword] 'tv')
                  ]
              )
          )
        rules:
          [
            (Ruleset
              selector:
                (SelectorList
                  value:
                    [
                      (BasicSelector '.ma')
                      (BasicSelector '.mb')
                      (BasicSelector '.mc')
                    ]
                )
              rules:
                [
                  (Nil '')
                  (Declaration
                    name:
                      (Any [role=property] 'color')
                    value:
                      (Color
                        node: 'black'
                      )
                  )
                ]
            )
            (Ruleset
              selector:
                (SelectorList
                  value:
                    [
                      (BasicSelector '.md')
                      (BasicSelector '.ma')
                      (BasicSelector '.mb')
                      (BasicSelector '.mc')
                    ]
                )
              rules:
                [
                  (Declaration
                    name:
                      (Any [role=property] 'color')
                    value:
                      (Any 'inherit')
                  )
                ]
            )
            (AtRule
              name:
                (Any '@media')
              prelude:
                (Paren
                  node:
                    (QueryCondition
                      value:
                        [
                          (Keyword [role=keyword] 'plasma')
                        ]
                    )
                )
              rules:
                [
                  (Rules
                    rules:
                      [
                        (Nil '')
                        (Ruleset
                          selector:
                            (SelectorList
                              value:
                                [
                                  (BasicSelector '.me')
                                  (BasicSelector '.mf')
                                ]
                            )
                          rules:
                            [
                              (Nil '')
                              (Declaration
                                name:
                                  (Any [role=property] 'background')
                                value:
                                  (Color
                                    node: 'red'
                                  )
                              )
                            ]
                        )
                      ]
                  )
                ]
            )
          ]
      )
      (Ruleset
        selector:
          (SelectorList
            value:
              [
                (BasicSelector '.mb')
                (BasicSelector '.mc')
              ]
          )
        rules:
          [
            (Nil '')
          ]
      )
      (Ruleset
        selector:
          (BasicSelector '.mc')
        rules:
          [
            (Nil '')
          ]
      )
    ]
)"
`;
